make multimethods_from_roles optional

--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -7,6 +7,7 @@
 	:runtime-requirement    [ :on "Types::Standard 1.008003"^^:CpanId ];
 	:runtime-requirement    [ :on "Type::Params 1.008003"^^:CpanId ];
 	:runtime-requirement    [ :on "Exporter::Shiny"^^:CpanId ];
+	:runtime-requirement    [ :on "Role::Hooks"^^:CpanId ];
 	:test-requirement       [ :on "Test::More 0.96"^^:CpanId ];
 	:test-requirement       [ :on "Class::Tiny"^^:CpanId ];
 	:test-requirement       [ :on "Role::Tiny"^^:CpanId ];
