--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,11 @@ jobs:
       - name: Install local::lib
         run: |
           cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
+      - name: Install Dist::Inkt dependencies
+        shell: bash
+        run: |
+          eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
+          cpanm -n Try::Tiny LWP::UserAgent Data::Dump
       - name: Install Dist::Inkt
         shell: bash
         run: |
@@ -94,17 +99,17 @@ jobs:
             extra_dependencies: true
             extended_testing: 'extended'
             joblabel: '(Coverage)'
-          - { os: 'ubuntu-18.04', perl: '5.8.1',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.8.2',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.8.3',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.8.4',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.8.5',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.8.6',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.8.7',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.8.8',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.8.9',  threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.10.0', threaded: false }
-          - { os: 'ubuntu-18.04', perl: '5.10.1', threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.1',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.2',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.3',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.4',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.5',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.6',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.7',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.8',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.8.9',  threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.10.0', threaded: false }
+          - { os: 'ubuntu-20.04', perl: '5.10.1', threaded: false }
     steps:
       - name: Get dist artifact
         uses: actions/download-artifact@v2
